port allowed 5000 for docker

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # Flask Configuration
-FLASK_ENV=development
-FLASK_DEBUG=True
+FLASK_ENV=production
+FLASK_DEBUG=False
 SECRET_KEY=your_secret_key_here
 
-# MongoDB Configuration
-MONGO_URI=mongodb://localhost:27017
+# MongoDB (Docker service name, NOT localhost)
+MONGO_URI=mongodb://ems_mongodb:27017
 DATABASE_NAME=employee_management
