--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - .env
     depends_on:
       - mongo
+      - redis
     restart: always
 
   mongo:
@@ -19,5 +20,16 @@ services:
       - mongo_data:/data/db
     restart: always
 
+  redis:
+    image: redis:7-alpine
+    container_name: ems_redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    command: redis-server --appendonly yes
+    restart: unless-stopped
+
 volumes:
   mongo_data:
+  redis_data:
